k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signboard-frontend-deployment
  namespace: default
  labels:
    app: signboard-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: signboard-frontend
  template:
    metadata:
      labels:
        app: signboard-frontend
    spec:
      containers:
      - name: signboard-frontend
        image: ai2
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
