k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signboard-frontend-service
  namespace: default
spec:
  selector:
    app: signboard-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
